manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-web-server-response-svc
spec:
  type: ClusterIP
  selector:
    app: py-web-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
